day31/my-k8s-app/deployment.yaml
#Kubernetes deployment file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-k8s-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-k8s-app
  template:
    metadata:
      labels:
        app: my-k8s-app
    spec:
      containers:
      - name: my-k8s-app
        image: nawaz130987/my-k8s-app
        ports:
        - containerPort: 3000
