day31/my-k8s-app/ingress.yaml
#Kubernetes ingress file
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-k8s-app-ingress
spec:
  rules:
  - host: my-k8s-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-k8s-app-service
            port:
              number: 80
